GCP-6371 Pedigree